Fix ad showing when sidebar is collapsed

--- a/cmd/yagpdb/static/css/custom.css
+++ b/cmd/yagpdb/static/css/custom.css
@@ -188,3 +188,7 @@ html.dark p  {
     display: none;
   }
 }
+
+html.sidebar-left-collapsed #nav-footer {
+  display: none;
+}
